--- a/install
+++ b/install
@@ -35,6 +35,10 @@ echo "CHECKING AND INSTALLING DEPENDENCIES:"
 
 
 if [ $OSTYPE == "mac" ]; then
+
+  echo "-> Installing xcode command line tools, if not yet installed"
+  xcode-select --install
+
 	echo "Checking brew for mac."
 	if ! command -v brew &> /dev/null; then
 		echo "-> Please wait while we attempt to install missing 'brew' package. (requires sudo)"
@@ -45,10 +49,14 @@ if [ $OSTYPE == "mac" ]; then
 	else
 	 	echo "Brew installed at $(which brew)"
 	 	BREWINSTALLED=true
-	 	echo "-> Please wait while we attempt to install the correct 'base64' package (in case of old osx's). (requires sudo)"
-    		brew install base64 2> /dev/null
 	fi
+
+	echo "-> Please wait while we attempt to install the correct 'base64' package (in case of old osx's). (requires sudo)"
+  brew install base64
+
 fi
+
+
 
 
 
@@ -56,7 +64,7 @@ fi
 echo "Checking git installation."
 if ! command -v git &> /dev/null; then
   echo "-> Please wait while we attempt to install missing 'git' package. (requires sudo)"
-  (sudo apt install git > /dev/null 2> /dev/null || brew install git  2> /dev/null) && echo "Git installed."
+  (sudo apt install git > /dev/null || brew install git ) && echo "Git installed."
 fi
 if ! command -v git &> /dev/null; then
 	failed "Git could not be installed ?"
@@ -75,7 +83,7 @@ fi
 echo "Checking unzip installation."
 if ! command -v unzip &> /dev/null; then
   echo "-> Please wait while we attempt to install missing 'unzip' package. (requires sudo)"
-  (sudo apt install unzip > /dev/null || brew install unzip 2> /dev/null )
+  (sudo apt install unzip > /dev/null || brew install unzip )
 fi
 if ! command -v unzip &> /dev/null; then	
 	failed "Unzip could not be installed ?"
@@ -89,7 +97,7 @@ fi
 echo "Checking adb."
 if ! command -v adb &> /dev/null; then
   if [ $OSTYPE == "mac" ]; then
-	brew cask install android-platform-tools 2> /dev/null
+	brew cask install android-platform-tools
   fi
   
   if [ $OSTYPE == "linux" ]; then
