xcode-select --install

--- a/install
+++ b/install
@@ -157,7 +157,7 @@ fi
 echo "Checking zenity."
 if ! command -v zenity &> /dev/null; then	
   echo "-> Please wait while we attempt to install missing 'zenity' package. (requires sudo)"
-  (sudo apt install zenity > /dev/null 2> /dev/null || brew install zenity 2> /dev/null)
+  (sudo apt install zenity > /dev/null || brew install zenity)
 fi
 if ! command -v zenity &> /dev/null; then	
 	failed "Zenity could not be installed ?"
@@ -172,7 +172,7 @@ fi
 echo 	"Checking rclone."
 if ! command -v rclone &> /dev/null; then	
   echo "-> Please wait while we attempt to install missing 'rclone' paackage. (requires sudo)"
-  curl --silent https://rclone.org/install.sh | sudo bash > /dev/null 2> /dev/null
+  curl --silent https://rclone.org/install.sh | sudo bash > /dev/null
 fi
 if ! command -v rclone &> /dev/null; then	
 	failed "Rclone could not be installed ?"
