--- a/install
+++ b/install
@@ -62,12 +62,12 @@ if [ $OSTYPE == "mac" ]; then
 
 
   echo "Checking OSXFUSE for mac."
-	if ! command -v fusermount &> /dev/null; then
+  if [ -f "/usr/local/bin/fusermount" ]; then
 		echo "-> Please wait while we attempt to install missing 'OSXFUSE' package."
 		brew cask install osxfuse && echo "OSXFUSE installed."
 	fi
-	echo "which: $(which fusermount)"
-	if ! command -v fusermount &> /dev/null; then
+	echo "ls -la : $(ls -la "/usr/local/bin/fusermount")"
+	if [ -f "/usr/local/bin/fusermount" ]; then
 		failed "OSXFUSE could not be installed ?"
 	else
 	 	echo "OSXFUSE installed at $(which fusermount)"
