--- a/install
+++ b/install
@@ -37,6 +37,7 @@ echo "CHECKING AND INSTALLING DEPENDENCIES:"
 if [ $OSTYPE == "mac" ]; then
 
   echo "Checking xcode command line tools for mac."
+  echo "test: $(xcode-select -p)"
 	if ! xcode-select -p 1>/dev/null ; then
 		echo "-> Please wait while we attempt to install xcode command line tools"
 		xcode-select --install && echo "Xcode command line tools installed."
