--- a/install
+++ b/install
@@ -258,6 +258,7 @@ sudo cp ./sideload /usr/local/bin/sideload
 sudo cp ./sideload-gui /usr/local/bin/sideload-gui
 sudo cp ./whitewhidow-mount /usr/local/bin/whitewhidow-mount
 sudo cp ./install /usr/local/bin/sideload-update
+sudo cp ./extras/sideload-check-updates /usr/local/bin/sideload-check-updates
 
 
 cd $OLDPATH
