--- a/install
+++ b/install
@@ -262,7 +262,7 @@ sudo cp ./extras/sideload-check-updates /usr/local/bin/sideload-check-updates
 VERSION=$(git rev-parse HEAD)
 mkdir -p $HOME/quest-sideloader-linux
 touch $HOME/quest-sideloader-linux/sideloader-version.txt
-echo "$VERSION" >> $HOME/quest-sideloader-linux/sideloader-version.txt
+echo "$VERSION" > $HOME/quest-sideloader-linux/sideloader-version.txt
 
 cd $OLDPATH
 
