--- a/install
+++ b/install
@@ -258,8 +258,8 @@ sudo cp ./sideload /usr/local/bin/sideload
 sudo cp ./sideload-gui /usr/local/bin/sideload-gui
 sudo cp ./whitewhidow-mount /usr/local/bin/whitewhidow-mount
 sudo cp ./install /usr/local/bin/sideload-update
-sudo cp ./extras/sideload-check-updates /usr/local/bin/sideload-check-updates
-sudo cp ./extras/sideload-change-settings /usr/local/bin/sideload-change-settings
+sudo cp ./sideload-check-updates /usr/local/bin/sideload-check-updates
+sudo cp ./sideload-change-settings /usr/local/bin/sideload-change-settings
 
 VERSION=$(git rev-parse HEAD)
 mkdir -p $HOME/quest-sideloader-linux
