--- a/install
+++ b/install
@@ -233,9 +233,9 @@ sudo cp ./sideloader-config /usr/local/bin/sideloader-config
 
 sudo cp ./sideload /usr/local/bin/sideload
 
+sudo cp ./sideload-browser /usr/local/bin/sideload-browser
 sudo cp ./sideload-gui /usr/local/bin/sideload-gui
 sudo cp ./sideload-mount /usr/local/bin/sideload-mount
-sudo cp ./whitewhidow-mount /usr/local/bin/whitewhidow-mount
 
 sudo cp ./sideload-change-settings /usr/local/bin/sideload-change-settings
 sudo cp ./sideload-change-username /usr/local/bin/sideload-change-username
