--- a/install
+++ b/install
@@ -23,7 +23,6 @@ esac
 
 function failed(){
 	LINE="\n\nInstall seems to have failed with the following reason:\n\n$1.\n\nPlease paste the terminal output to github,\nI will gladly assist! \n"
-	[ -z $CI ] && zenity --warning --text="$LINE" --width="600" 2> /dev/null
 	echo -e "$LINE"
 	read -p "Press [ENTER] to continue." < "$(tty 0>&2)"
 	exit 1
@@ -160,7 +159,7 @@ fi
 if ! command -v pv &> /dev/null; then
   failed "pv could not be installed !"
 else
- 	echo "pv installed at $(which zenity)"
+ 	echo "pv installed at $(which pv)"
 fi
 
 
@@ -259,11 +258,9 @@ cd $OLDPATH
 if [ ! -z $NEWFUSE ]; then
   SUCCESS="\n\n -> Install was almost successfull.\n\nHowever your system will need to reboot because (you are one mac osx) and we have just installed OSXFUSE.\n\n -> Please reboot and re-run this installer.\n\n\n"
   echo -e "$SUCCESS"
-  [ -z $CI ] && zenity --question --text="$SUCCESS" --width="600" 2> /dev/null
 else
   # IF INSTALL SUCCESS AND NO NEW OSXFUSE INSTALLED
   echo -e "\n\n -> Install seems to have been successfull\n\nPress any key to start the sideload-gui now? [Yy/Nn]\n\n"
-
   while true; do
     read -p "" yn
     case $yn in
@@ -272,7 +269,6 @@ else
         * )  echo "You can start the sideload gui at any time by running 'sideload-gui'" && exit;;
     esac
   done
-
 fi
 
 
